--- a/src/main/resources/Styles/alertStyle.css
+++ b/src/main/resources/Styles/alertStyle.css
@@ -3,8 +3,8 @@
 }
 
 .dialog-pane .content.label {
-    -fx-text-fill: #dde6ed;
-    -fx-font-size: 1.5em;
+    -fx-text-fill: #27374d;
+    -fx-font-size: 1.2em;
     -fx-font-family: "Arial";
     -fx-font-weight: bold;
 }
