--- a/src/main/resources/Fxml/Client/ClientMenuView/InserimentoDatiPagamento.fxml
+++ b/src/main/resources/Fxml/Client/ClientMenuView/InserimentoDatiPagamento.fxml
@@ -9,63 +9,56 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="contenitoreDatiPagamento" maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.InserimentoDatiPagamentoController">
+<AnchorPane id="contenitoreDatiPagamento" fx:id="contenitoreDatiPagamento" maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" stylesheets="@../../../Styles/inserimentoDatiPagamento.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wepower.wepower.Controllers.Client.ClientViewsController.InserimentoDatiPagamentoController">
    <children>
       <VBox AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="30.0">
          <children>
-            <Label fx:id="labelNomeAbbonamento" text="Tipo di abbonamento">
-               <font>
-                  <Font name="Arial Bold" size="30.0" />
-               </font>
-            </Label>
-            <Label fx:id="labelPrezzoAbbonamento" text="Prezzo">
-               <font>
-                  <Font name="Arial Bold" size="30.0" />
-               </font>
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
+               <children>
+                  <Label id="tipoAbbonamento" fx:id="labelNomeAbbonamento" text="Tipo di abbonamento">
+                     <font>
+                        <Font name="Arial Bold" size="30.0" />
+                     </font>
+                  </Label>
+                  <Label id="prezzoAbbonamento" fx:id="labelPrezzoAbbonamento" text="Prezzo">
+                     <font>
+                        <Font name="Arial Bold" size="30.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </Label>
+               </children>
+            </VBox>
+            <Label id="labelInserimentoDati" fx:id="labelProprietarioCarta" text="Nome proprietario carta:">
                <VBox.margin>
-                  <Insets top="20.0" />
+                  <Insets />
                </VBox.margin>
             </Label>
-            <Label fx:id="labelProprietarioCarta" text="Nome proprietario carta:">
-               <font>
-                  <Font size="25.0" />
-               </font>
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </Label>
-            <TextField fx:id="textFieldProprietarioCarta">
+            <TextField fx:id="textFieldProprietarioCarta" styleClass="input_login" stylesheets="@../../../Styles/login.css">
                <font>
                   <Font size="25.0" />
                </font>
             </TextField>
-            <Label fx:id="labelNumeroCarta" text="Numero carta:">
-               <font>
-                  <Font size="25.0" />
-               </font>
+            <Label id="labelInserimentoDati" fx:id="labelNumeroCarta" text="Numero carta:">
                <VBox.margin>
                   <Insets top="30.0" />
                </VBox.margin>
             </Label>
-            <TextField fx:id="textFieldNumeroCarta">
+            <TextField fx:id="textFieldNumeroCarta" styleClass="input_login" stylesheets="@../../../Styles/login.css">
                <font>
                   <Font size="25.0" />
                </font>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
             </TextField>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <VBox prefHeight="100.0" prefWidth="300.0">
                      <children>
-                        <Label fx:id="labelDataScadenzaCarta" text="Data scadenza carta">
-                           <font>
-                              <Font size="25.0" />
-                           </font>
-                        </Label>
-                        <TextField fx:id="textFieldDataScadenzacarta" promptText="MM/YY">
+                        <Label id="labelInserimentoDati" fx:id="labelDataScadenzaCarta" text="Data scadenza carta">
+                           <VBox.margin>
+                              <Insets top="30.0" />
+                           </VBox.margin></Label>
+                        <TextField fx:id="textFieldDataScadenzacarta" promptText="MM/YY" styleClass="input_login" stylesheets="@../../../Styles/login.css">
                            <font>
                               <Font size="25.0" />
                            </font>
@@ -77,12 +70,11 @@
                         <Insets left="20.0" />
                      </HBox.margin>
                      <children>
-                        <Label fx:id="labelCvc" text="CVC">
-                           <font>
-                              <Font size="25.0" />
-                           </font>
-                        </Label>
-                        <TextField fx:id="textFieldCvc">
+                        <Label id="labelInserimentoDati" fx:id="labelCvc" text="CVC">
+                           <VBox.margin>
+                              <Insets top="30.0" />
+                           </VBox.margin></Label>
+                        <TextField fx:id="textFieldCvc" styleClass="input_login" stylesheets="@../../../Styles/login.css">
                            <font>
                               <Font size="25.0" />
                            </font>
@@ -91,14 +83,14 @@
                   </VBox>
                </children>
             </HBox>
-            <Button fx:id="btnPaga" mnemonicParsing="false" prefHeight="52.0" prefWidth="745.0" text="Paga">
-               <font>
-                  <Font size="25.0" />
-               </font>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Button id="bottonePaga" fx:id="btnPaga" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="52.0" prefWidth="745.0" text="Paga" />
+               </children>
                <VBox.margin>
-                  <Insets top="20.0" />
+                  <Insets top="30.0" />
                </VBox.margin>
-            </Button>
+            </HBox>
          </children>
       </VBox>
    </children>
